Made Changes: - Added Proofreading Template (logic working). - Created tooltips in image for proofreading.2

--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -7,8 +7,22 @@
 </head>
 
 <body>
-
-    <div class="split top">
+    <ul class="circles">
+                    <li>  </li>
+                    <li>  </li>
+                    <li>  </li>
+                    <li>  </li>
+                    <li>  </li>
+                    <li>  </li>
+                    <li>  </li>
+                    <li>  </li>
+                    <li>  </li>
+                    <li>  </li>
+                    <li>  </li>
+                    <li>  </li>
+                    <li>  </li>
+            </ul>
+    <div class="split top area">
         <div id="upper_half">
             
             <div class="split top left">
