--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -22,44 +22,44 @@
                     <li>  </li>
                     <li>  </li>
             </ul>
-    <div class="split top area">
-        <div id="upper_half">
+    <!--<div class="split top area">-->
+        <!--<div id="upper_half">-->
             
-            <div class="split top left">
-                <div class="centered" id="upper_half_left">
+            <!--<div class="split top left">-->
+                <div class="Padding" id="upper_half_left">
                     <form action="{% url 'index:home' %}" method="GET">
                         <button type="submit" value="OCR SCANNER">OCR SCANNER</button>
                     </form>
                 </div>
-            </div>
+            <!--</div>-->
 
-            <div class="split top right">
-                <div class="centered" id="upper_half_right">
+            <!--<div class="split top right">-->
+                <div class="Padding1" id="upper_half_right">
                     <form action="{% url 'index:pdf_home' %}" method="GET">
                     <button type="submit" value="PDF to PNG Converter">PDF to PNG Converter</button>
                     </form>
                 </div>
-            </div>
-        </div>
-    </div>
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
-    <div class="split down">
-        <div class="split down left">
-            <div class="centered" id="lower_half_left">
+    <!--<div class="split down">-->
+        <!--<div class="split down left">-->
+            <div class="Padding2" id="lower_half_left">
                 <form action="{% url 'index:pdf2pdf_home' %}" method="GET">
                             <button type="submit" value="PDF2PDF">PDF to PDF</button>
                 </form>
             </div>
-        </div>
+        <!--</div>-->
 
-        <div class="split down right">
-            <div class="centered" id="lower_half_right">
+        <!--<div class="split down right">-->
+            <div class="Padding3" id="lower_half_right">
                 <form action="{% url 'index:proofread' %}" method="GET">
                             <button type="submit" value="Proof">Proofreading</button>
                 </form>
             </div>
-        </div>
-    </div>
+        <!--</div>-->
+    <!--</div>-->
 </body>
 
 </html>
