--- a/index/templates/proofread/proofread.html
+++ b/index/templates/proofread/proofread.html
@@ -8,7 +8,7 @@
 <div class="tooltip">
 <div id="map">
     {% load static %}
-	<img src="{% static 'images/0681Q00000FqEFYQA3.pdf-page2.png' %}" height="3300" width="2550"
+	<img src="{% static 'images/0681Q00000FqEFYQA3.png' %}"
 	alt="Locations Map" usemap="#locations" id="locations-map" /> <map name="locations" id="locations">
 
 <!-- LEFT, TOP, WIDTH, HEIGHT -->
@@ -17,7 +17,12 @@
 <area shape="circle" class="tooltip" alt="Proofread tag" coords="{{ i.0 }},{{ i.1 }},20" href="" title="{{ i.3 }}, CONF={{ i.2 }}" />
 {% endfor %}
 </map></div>
- </div>
+</div>
+
+<form action="" method="GET">
+    <button id="update" type="submit" value="Proof">Next</button>
+</form>
+
 <style>
 
 .tooltip {
