--- a/index/templates/progressbar/display_progress.html
+++ b/index/templates/progressbar/display_progress.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Progress Bar</title>
 </head>
 <body>
-$END$
+<h3>{{ var }}</h3>
 </body>
 </html>
