--- a/index/static/css/style.css
+++ b/index/static/css/style.css
@@ -1,132 +1,64 @@
-@import url('https://rsms.me/inter/inter-ui.css');
-::selection {
-  background: #2D2F36;
+@import url('https://fonts.googleapis.com/css?family=Barrio|Montserrat:700');
+
+mark { 
+  background-color: yellow;
+  color: black;
 }
-::-webkit-selection {
-  background: #2D2F36;
+
+.mark1 { 
+  background-color: rgb(255, 187, 0);
+  color: black;
 }
-::-moz-selection {
-  background: #2D2F36;
+
+.area_left{
+	position: absolute;
+	left: 5px;
+    width: 50%;
 }
-body {
-  background: white;
-  font-family: 'Inter UI', sans-serif;
-  margin: 0;
-  padding: 20px;
+
+.area_right{
+	position: absolute;
+	right: 5px;
+  width: 47%;
 }
-.page {
-  background: #e2e2e5;
-  display: flex;
-  flex-direction: column;
-  height: calc(100% - 40px);
-  position: absolute;
-  place-content: center;
-  width: calc(100% - 40px);
-}
-@media (max-width: 767px) {
-  .page {
-    height: auto;
-    margin-bottom: 20px;
-    padding-bottom: 20px;
-  }
-}
-.container {
-  display: flex;
-  height: 320px;
-  margin: 0 auto;
-  width: 640px;
-}
-@media (max-width: 767px) {
-  .container {
-    flex-direction: column;
-    height: 630px;
-    width: 320px;
-  }
-}
-.left {
-  background: white;
-  height: calc(100% - 40px);
-  top: 20px;
+
+.upper_element{
   position: relative;
-  width: 50%;
-}
-@media (max-width: 767px) {
-  .left {
-    height: 100%;
-    left: 20px;
-    width: calc(100% - 40px);
-    max-height: 270px;
-  }
-}
-.login {
-  font-size: 50px;
-  font-weight: 900;
-  margin: 50px 40px 40px;
-}
-.eula {
-  color: #999;
-  font-size: 14px;
-  line-height: 1.5;
-  margin: 40px;
-}
-.right {
-  background: #474A59;
-  box-shadow: 0px 0px 40px 16px rgba(0,0,0,0.22);
-  color: #F1F1F2;
-  position: relative;
-  width: 50%;
-}
-@media (max-width: 767px) {
-  .right {
-    flex-shrink: 0;
-    height: 100%;
-    width: 100%;
-    max-height: 350px;
-  }
-}
-svg {
-  position: absolute;
-  width: 320px;
-}
-path {
-  fill: none;
-  stroke: url(#linearGradient);;
-  stroke-width: 4;
-  stroke-dasharray: 240 1386;
-}
-.form {
-  margin: 40px;
-  position: absolute;
-}
-label {
-  color:  #c2c2c5;
-  display: block;
-  font-size: 14px;
-  height: 16px;
-  margin-top: 20px;
-  margin-bottom: 5px;
-}
-input {
-  background: transparent;
-  border: 0;
-  color: #f2f2f2;
-  font-size: 20px;
-  height: 30px;
-  line-height: 30px;
-  outline: none !important;
   width: 100%;
+  font-family: "Montserrat", sans-serif;
+  left: 5px;
 }
-input::-moz-focus-inner { 
-  border: 0; 
+
+.container_div{
+  position: relative;
 }
-#submit {
-  color: #707075;
-  margin-top: 40px;
-  transition: color 300ms;
+
+.left_file_cont{
+  position: sticky; 
+  background-color: white; 
+  top: 0px; 
+  left: 0px; 
+  width: 100%;
+  height: 8%;
 }
-#submit:focus {
-  color: #f2f2f2;
+
+
+.div_custom{
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 5px;
+  border-color: darkgrey;
+  height: 500px;
+  overflow-x: hidden;
+  position: absolute;
 }
-#submit:active {
-  color: #d0d0d2;
+
+.wrap{
+  word-wrap: break-word;
+}
+
+.lower_container{
+  position: absolute;
+  bottom: 10%;
+  width: 100%;
 }
